Initial frontend code

--- a/sign.html
+++ b/sign.html
@@ -8,7 +8,7 @@
       src="https://kit.fontawesome.com/64d58efce2.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="sign.css" />
     <title>Sign in & Sign up Form</title>
   </head>
   <body>
@@ -79,6 +79,6 @@
       </div>
     </div>
 
-    <script src="app.js"></script>
+    <script src="sign.js"></script>
   </body>
 </html>
